--- a/exploration/intro-to-r.ipynb
+++ b/exploration/intro-to-r.ipynb
@@ -322,6 +322,116 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "library(readr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  sat = col_integer(),\n",
+      "  tothrs = col_integer(),\n",
+      "  colgpa = col_double(),\n",
+      "  athlete = col_integer(),\n",
+      "  verbmath = col_double(),\n",
+      "  hsize = col_double(),\n",
+      "  hsrank = col_integer(),\n",
+      "  hsperc = col_double(),\n",
+      "  female = col_integer(),\n",
+      "  white = col_integer(),\n",
+      "  black = col_integer(),\n",
+      "  hsizesq = col_double()\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "gpa <- read_csv(\"~/git/iu-statistics/data-sets/Wooldridge GPA2 Data Set.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>sat</th><th scope=col>tothrs</th><th scope=col>colgpa</th><th scope=col>athlete</th><th scope=col>verbmath</th><th scope=col>hsize</th><th scope=col>hsrank</th><th scope=col>hsperc</th><th scope=col>female</th><th scope=col>white</th><th scope=col>black</th><th scope=col>hsizesq</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 920    </td><td> 43     </td><td>2.04    </td><td>1       </td><td>0.48387 </td><td>0.10    </td><td>  4     </td><td>40.00000</td><td>1       </td><td>0       </td><td>0       </td><td> 0.0100 </td></tr>\n",
+       "\t<tr><td>1170    </td><td> 18     </td><td>4.00    </td><td>0       </td><td>0.82813 </td><td>9.40    </td><td>191     </td><td>20.31915</td><td>0       </td><td>1       </td><td>0       </td><td>88.3600 </td></tr>\n",
+       "\t<tr><td> 810    </td><td> 14     </td><td>1.78    </td><td>1       </td><td>0.88372 </td><td>1.19    </td><td> 42     </td><td>35.29412</td><td>0       </td><td>1       </td><td>0       </td><td> 1.4161 </td></tr>\n",
+       "\t<tr><td> 940    </td><td> 40     </td><td>2.42    </td><td>0       </td><td>0.80769 </td><td>5.71    </td><td>252     </td><td>44.13310</td><td>0       </td><td>1       </td><td>0       </td><td>32.6041 </td></tr>\n",
+       "\t<tr><td>1180    </td><td> 18     </td><td>2.61    </td><td>0       </td><td>0.73529 </td><td>2.14    </td><td> 86     </td><td>40.18692</td><td>0       </td><td>1       </td><td>0       </td><td> 4.5796 </td></tr>\n",
+       "\t<tr><td> 980    </td><td>114     </td><td>3.03    </td><td>0       </td><td>0.81481 </td><td>2.68    </td><td> 41     </td><td>15.29851</td><td>1       </td><td>1       </td><td>0       </td><td> 7.1824 </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|llllllllllll}\n",
+       " sat & tothrs & colgpa & athlete & verbmath & hsize & hsrank & hsperc & female & white & black & hsizesq\\\\\n",
+       "\\hline\n",
+       "\t  920     &  43      & 2.04     & 1        & 0.48387  & 0.10     &   4      & 40.00000 & 1        & 0        & 0        &  0.0100 \\\\\n",
+       "\t 1170     &  18      & 4.00     & 0        & 0.82813  & 9.40     & 191      & 20.31915 & 0        & 1        & 0        & 88.3600 \\\\\n",
+       "\t  810     &  14      & 1.78     & 1        & 0.88372  & 1.19     &  42      & 35.29412 & 0        & 1        & 0        &  1.4161 \\\\\n",
+       "\t  940     &  40      & 2.42     & 0        & 0.80769  & 5.71     & 252      & 44.13310 & 0        & 1        & 0        & 32.6041 \\\\\n",
+       "\t 1180     &  18      & 2.61     & 0        & 0.73529  & 2.14     &  86      & 40.18692 & 0        & 1        & 0        &  4.5796 \\\\\n",
+       "\t  980     & 114      & 3.03     & 0        & 0.81481  & 2.68     &  41      & 15.29851 & 1        & 1        & 0        &  7.1824 \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "sat | tothrs | colgpa | athlete | verbmath | hsize | hsrank | hsperc | female | white | black | hsizesq | \n",
+       "|---|---|---|---|---|---|\n",
+       "|  920     |  43      | 2.04     | 1        | 0.48387  | 0.10     |   4      | 40.00000 | 1        | 0        | 0        |  0.0100  | \n",
+       "| 1170     |  18      | 4.00     | 0        | 0.82813  | 9.40     | 191      | 20.31915 | 0        | 1        | 0        | 88.3600  | \n",
+       "|  810     |  14      | 1.78     | 1        | 0.88372  | 1.19     |  42      | 35.29412 | 0        | 1        | 0        |  1.4161  | \n",
+       "|  940     |  40      | 2.42     | 0        | 0.80769  | 5.71     | 252      | 44.13310 | 0        | 1        | 0        | 32.6041  | \n",
+       "| 1180     |  18      | 2.61     | 0        | 0.73529  | 2.14     |  86      | 40.18692 | 0        | 1        | 0        |  4.5796  | \n",
+       "|  980     | 114      | 3.03     | 0        | 0.81481  | 2.68     |  41      | 15.29851 | 1        | 1        | 0        |  7.1824  | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  sat  tothrs colgpa athlete verbmath hsize hsrank hsperc   female white black\n",
+       "1  920  43    2.04   1       0.48387  0.10    4    40.00000 1      0     0    \n",
+       "2 1170  18    4.00   0       0.82813  9.40  191    20.31915 0      1     0    \n",
+       "3  810  14    1.78   1       0.88372  1.19   42    35.29412 0      1     0    \n",
+       "4  940  40    2.42   0       0.80769  5.71  252    44.13310 0      1     0    \n",
+       "5 1180  18    2.61   0       0.73529  2.14   86    40.18692 0      1     0    \n",
+       "6  980 114    3.03   0       0.81481  2.68   41    15.29851 1      1     0    \n",
+       "  hsizesq\n",
+       "1  0.0100\n",
+       "2 88.3600\n",
+       "3  1.4161\n",
+       "4 32.6041\n",
+       "5  4.5796\n",
+       "6  7.1824"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "head(gpa)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
