--- a/exercises/homework-02/confidence-intervals.ipynb
+++ b/exercises/homework-02/confidence-intervals.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,18 +40,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "hatpi = 0.538\n",
     "n = 1095\n",
-    "z = 2.58"
+    "z = 2.58\n",
+    "\n",
+    "# for rounding, below\n",
+    "sigdig = 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +63,7 @@
        "0.015066246407845513"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +86,7 @@
     }
    ],
    "source": [
-    "ci(hatpi, 0.015, z)"
+    "ci(hatpi, round(se(hatpi, n),sigdig), z)"
    ]
   },
   {
@@ -94,24 +97,49 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Problem\n",
+    "In response to the GSS question in 2014 about the number of hours daily spent watching TV, the responses by the seven subjects who identified themselves as being raised Islamic were 1, 1, 1, 2, 2, 3, 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estimate the mean, standard deviation, and standard error"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [1, 1, 1, 2, 2, 3, 6]"
+    "data = [1, 1, 1, 2, 2, 3, 6]\n",
+    "n = len(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### the mean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu = np.mean(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -120,38 +148,34 @@
        "2.2857142857142856"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.mean(data)"
+    "mu"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.6659862556700857"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "np.std(data)"
+    "#### the standard deviation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = np.std(data, ddof=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -160,18 +184,35 @@
        "1.7994708216848745"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.std(data, ddof=1)"
+    "s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### estimated standard error\n",
+    "$se = \\frac{s}{\\sqrt{n}}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "se = s / np.sqrt(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +221,34 @@
        "0.6801360408136047"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "se"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "verify using Scipy's `stats` package"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6801360408136047"
+      ]
+     },
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,10 +258,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### summary"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "precision = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data:\t[1, 1, 1, 2, 2, 3, 6]\n",
+      "n:\t7\n",
+      "mean:\t2.286\n",
+      "stddev:\t1.799\n",
+      "stderr:\t0.68\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"data:\\t{}\".format(data))\n",
+    "print(\"n:\\t{}\".format(n))\n",
+    "print(\"mean:\\t{}\".format(round(mu, precision)))\n",
+    "print(\"stddev:\\t{}\".format(round(s, precision)))\n",
+    "print(\"stderr:\\t{}\".format(round(se, precision)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.286"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
