Homework 2: question 7 complete

--- a/exercises/homework-02/confidence-intervals.ipynb
+++ b/exercises/homework-02/confidence-intervals.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "2.2857142857142856"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "1.7994708216848745"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "0.6801360408136047"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "0.6801360408136047"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,46 +275,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data:\t[1, 1, 1, 2, 2, 3, 6]\n",
-      "n:\t7\n",
-      "mean:\t2.286\n",
-      "stddev:\t1.799\n",
-      "stderr:\t0.68\n"
+      "data:     [1, 1, 1, 2, 2, 3, 6]\n",
+      "n:        7\n",
+      "Mean:     2.286\n",
+      "StDev:    1.799\n",
+      "SE Mean:  0.68\n"
      ]
     }
    ],
    "source": [
-    "print(\"data:\\t{}\".format(data))\n",
-    "print(\"n:\\t{}\".format(n))\n",
-    "print(\"mean:\\t{}\".format(round(mu, precision)))\n",
-    "print(\"stddev:\\t{}\".format(round(s, precision)))\n",
-    "print(\"stderr:\\t{}\".format(round(se, precision)))"
+    "print(\"data:     {}\".format(data))\n",
+    "print(\"n:        {}\".format(n))\n",
+    "print(\"Mean:     {}\".format(round(mu, precision)))\n",
+    "print(\"StDev:    {}\".format(round(s, precision)))\n",
+    "print(\"SE Mean:  {}\".format(round(se, precision)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### confidence interval, using t-score\n",
+    "$\\bar{y} \\pm t_{.025}(se)$, with $se = s / \\sqrt{n}$, where $df = n-1$ for the t-score. In this case $df = 7-1 = 6$.\n",
+    "\n",
+    "$\\bar{y} \\pm t_{.025}(se)$   \n",
+    "$\\bar{y} \\pm t_{.025}(s / \\sqrt{n})$   \n",
+    "$2.286 \\pm 2.447(1.799/\\sqrt{7})$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pm = 2.447*(s/np.sqrt(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.286"
+       "1.6642928918708908"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "pm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.286 +/- 1.664\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"{} +/- {}\".format(round(mu,3), round(pm,3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "low = mu - pm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "high = mu + pm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.621, 3.95)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"({}, {})\".format(round(low,3), round(high,3)))"
+   ]
   },
   {
    "cell_type": "code",
