mid-term: question 9 (work in progress)

--- a/mid-term-exam/mid-term-exam-computations.ipynb
+++ b/mid-term-exam/mid-term-exam-computations.ipynb
@@ -98,6 +98,149 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Combinations\n",
+    "\n",
+    "n things taken r at a time\n",
+    "\n",
+    "$$C = \\frac{n!}{(n-r)!r!}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def combinations(n, r):\n",
+    "    return int(math.factorial(n)/(math.factorial(n-r)*math.factorial(r)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Probability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the probability of rolling exactly two sixes in 6 rolls of a die?\n",
+    "\n",
+    "There are five things you need to do to work a binomial story problem.\n",
+    "\n",
+    "1. Define Success first. Success must be for a single trial. Success = \"Rolling a 6 on a single die\"\n",
+    "2. Define the probability of success (p): p = 1/6\n",
+    "3. Find the probability of failure: q = 5/6\n",
+    "4. Define the number of trials: n = 6\n",
+    "5. Define the number of successes out of those trials: x = 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The probability of getting exactly x success in n trials, with the probability of success on a single trial being p is:\n",
+    "\n",
+    "$$P(X=x) = nCx \\times p^{x} \\times q^{(n-x)}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In a large metropolitan area, past records revealed that 30% of all the high school graduates go to college. From 20 graduates selected at random, what is the probability that exactly 8 will go to college?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Define the probability of success (p): \n",
+    "p = 0.30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Find the probability of failure: \n",
+    "q = 1 - p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Define the number of trials: \n",
+    "n = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Define the number of successes out of those trials: \n",
+    "x = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def compute(p, q, n, x):\n",
+    "    return combinations(n,x)*np.power(p,x)*np.power(q,(n-x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.114396739704861"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute(p, q, n, x)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
