mid-term: question 9, revisited

--- a/mid-term-exam/mid-term-exam-computations.ipynb
+++ b/mid-term-exam/mid-term-exam-computations.ipynb
@@ -904,6 +904,103 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Binomial Distribution\n",
+    "\n",
+    "This is a case where we want to apply the Probability for a Binomial Distribution, because there (1) there are two possible outcomes for each observation, (2) using the historical values, the probability is the same for each observation, (3) the outcomes for each observation are independent.\n",
+    "\n",
+    "$x$ = the number of outcomes   \n",
+    "$n$ = the number of independent observations   \n",
+    "$P(x)$ = the probability that $x$ outcomes will fall into a single category   \n",
+    "$\\pi$ = the probability that any one outcome will fall into a single category   \n",
+    "$1-\\pi$ = the probability that any one outcome will fall into the other category   \n",
+    "\n",
+    "$$P(x) = \\frac{n!}{x!(n-x)!}\\pi^{x}(1-\\pi)^{n-x}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import factorial\n",
+    "\n",
+    "def binomial(n, x, pi):\n",
+    "    term1 = factorial(n)/(factorial(x)*factorial(n-x))\n",
+    "    term2 = pow(pi, x)\n",
+    "    term3 = pow(1-pi, n-x)\n",
+    "    return term1*term2*term3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**9.** *In a large metropolitan area, past records revealed that 30% of all the high school graduates go to college. From 20 graduates selected at random, what is the probability that exactly 8 will go to college?*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 20\n",
+    "x = 8\n",
+    "pi = 0.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.114396739704861"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binomial(n, x, pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.114"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(binomial(n, x, pi),3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
