mid-term: question 15

--- a/mid-term-exam/mid-term-exam-computations.ipynb
+++ b/mid-term-exam/mid-term-exam-computations.ipynb
@@ -1224,6 +1224,159 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparison of Two Groups\n",
+    "### Comparing Two Means\n",
+    "\n",
+    "$se = \\sqrt{(\\frac{s_{1}^{2}}{n_{1}}) + (\\frac{s_{2}^{2}}{n_{2}})}$\n",
+    "\n",
+    "$t = \\frac{\\bar{y_{2}} - \\bar{y_{1}} - 0}{se}$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def se(n1, s1, n2, s2):\n",
+    "    term1 = pow(s1,2) / n1\n",
+    "    term2 = pow(s2,2) / n2\n",
+    "    return np.sqrt(term1 + term2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n1 = 20\n",
+    "s1 = 9568\n",
+    "ybar1 = 68456\n",
+    "n2 = 25\n",
+    "s2 = 9378\n",
+    "ybar2 = 60350"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2845.2076479582297"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "se(n1, s1, n2, s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2845.208"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(se(n1, s1, n2, s2), 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tscore(ybar1, ybar2, se):\n",
+    "    return (ybar2 - ybar1)/se"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.849000846335312"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tscore(ybar1, ybar2, 2845.208)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.849"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(tscore(ybar1, ybar2, 2845.208), 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### confidence interval\n",
+    "\n",
+    "$(\\bar{y_{2}} - \\bar{y_{1}}) \\pm t(se)$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
