mid-term: R part, last question

--- a/mid-term-exam/mid-term-exam-computations.ipynb
+++ b/mid-term-exam/mid-term-exam-computations.ipynb
@@ -1366,9 +1366,223 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## R part, question 4\n",
+    "- group 1: public institutions \n",
+    "- group 2: private institutions "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n1 = 531\n",
+    "s1 = 2520.57\n",
+    "ybar1 = 8265.54\n",
+    "n2 = 956\n",
+    "s2 = 10375.40\n",
+    "ybar2 = 28700.50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "352.9422205065456"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "se(n1, s1, n2, s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "352.942"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(se(n1, s1, n2, s2), 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "57.898918235857444"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tscore(ybar1, ybar2, 352.942)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "57.899"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(tscore(ybar1, ybar2, 352.942), 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### confidence interval\n",
     "\n",
     "$(\\bar{y_{2}} - \\bar{y_{1}}) \\pm t(se)$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ci(ybar1, ybar2, t, se):\n",
+    "    pm = t*se\n",
+    "    diff = ybar2 - ybar1\n",
+    "    print(\"(y2¯ − y1¯) ± t(se) = ({0} - {1}) ± {2}({3:2.3f}) = {4} ± {5} or ({6}, {7})\".format(ybar2,ybar1,t,se,diff,pm, diff-pm, diff+pm))\n",
+    "    #print(\"(y2¯ − y1¯) ± t(se) = ({0} - {1}) ± {3}({4:2.3f}) = {3} ± {4:2.4f}, or ({5:2.4f},{6:2.4f})\".format(hatpi,z,se, hatpi,pm, hatpi-pm,hatpi+pm))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(y2¯ − y1¯) ± t(se) = (28700.5 - 8265.54) ± 1.96(352.942) = 20434.96 ± 691.76632 or (19743.19368, 21126.726319999998)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ci(ybar1, ybar2, 1.96, 352.942)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20434.988858"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "57.899*352.942"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8265.54"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ybar1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28700.5"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ybar2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20434.96"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ybar2-ybar1"
    ]
   },
   {
